--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ test/dummy/db/*.sqlite3-journal
 test/dummy/log/*.log
 test/dummy/tmp/*
 test/dummy/tmp/**/*
+spec/dummy/db/*
+spec/dummy/log/*
 test/dummy/.sass-cache
